# m4

./: .gitignore  .gitmodules  M4_INPUT_DATA_FORMAT.md  README-OM.md  README.md  environment.yml  extract.py  fake_inference_topo.py  flowsim_4.txt  flowsim_throughput.txt  gen_app.py  gen_large_traffic.py  gen_traffic_ac.py  ground_4.txt  ground_truth.csv  m4_4.txt  m4_throughput.txt  main_dctcp.csv  main_eval.ipynb  main_inference.py  main_inference_link.py  main_inference_link_gpu.py  main_inference_path.py  main_inference_testbed.py  main_inference_topo.py  main_inference_topo_cplusplus.py  main_inference_topo_cplusplus_eval.py  main_inference_topo_cplusplus_eval_new.py  main_inference_topo_large.py  main_inference_topo_link.py  main_inference_topo_nolstm.py  main_inference_topo_notime.py  main_link.py  main_preliminary.ipynb  main_prep.ipynb  main_test.py  main_train.py  ns3_4.txt  ns3_throughput.txt  obs_busy_period_link.ipynb  (+51 more)
flowsim/: .gitignore  CMakeLists.txt  Chunk.cpp  Chunk.h  Device.h  Event.cpp  EventQueue.cpp  EventQueue.h  Link.h  Makefile  Topology.cpp  Topology.h  Type.h  backup_run.sh  baseline.npy.npz  cdf_fct.py  compare.py  config.yaml  convert.py  debug.sh  dur_ns_ecdf.csv  flows.txt  flowsim.cpp  flowsim.sh  load.py  log  main  main.cpp  main_m4  main_m4.cpp  main_m4_noflowsim.cpp  new_config.yaml  old_Makefile  run.sh  scan.py  test.py  tmake  valid.npy
flowsim/0/: flows.json
flowsim/0/ns3/: config_topology_flows.txt  convert_log.txt  fct_topology_flows_dctcp.txt  flow_to_links.txt  flow_to_path.txt  log_flowsim.txt  log_post.txt  log_sim.txt  path_1.txt  records.csv
flowsim/12/: flows.json
flowsim/12/ns3/: config_topology_flows.txt  convert_log.txt  fat.npy  fct_i_topology_flows_dctcp.npy  fct_topology_flows_dctcp.npy  fct_topology_flows_dctcp.txt  flink.npy  flow_to_links.txt  flow_to_path.npy  flow_to_path.txt  flows.txt  fsize.npy  log_flowsim.txt  log_post.txt  log_sim.txt  param_topology.npy  param_topology.txt  path_1.txt  period_time_topology_flows_dctcp_t100000000.npy  period_topology_flows_dctcp_t100000000.npy  records.csv
flowsim/87/: flows.json
flowsim/87/ns3/: config_topology_flows.txt  convert_log.txt  fct_topology_flows_dctcp.txt  flow_to_links.txt  flow_to_path.txt  log_post.txt  log_sim.txt  path_1.txt  records.csv  topology.txt
flowsim/88/: flows.json
flowsim/88/ns3/: config_topology_flows.txt  convert_log.txt  fct_topology_flows_dctcp.txt  flink.txt  flow_to_links.txt  flow_to_path.txt  log_flowsim.txt  log_post.txt  log_sim.txt  mix_topology_flows_dctcp.tr  path_1.txt  records.csv  topology.txt
flowsim/final/: gnn_layer_2.pt
flowsim/model/: gnn_layer_0.pt  gnn_layer_1.pt  gnn_layer_2.pt  lstmcell_rate.pt  lstmcell_rate_link.pt  lstmcell_time.pt  lstmcell_time_link.pt  output_layer.pt
flowsim/model_no_flowsim/: gnn_layer_0.pt  gnn_layer_1.pt  gnn_layer_2.pt  lstmcell_rate.pt  lstmcell_rate_link.pt  lstmcell_time.pt  lstmcell_time_link.pt  output_layer.pt
flowsim/new_eval/: flows.json
flowsim/new_eval/ns3/: config_topology_flows.txt  convert_log.txt  fct_topology_flows_dctcp.txt  flow_to_path.txt  log_flowsim.txt  log_post.txt  log_sim.txt  mix_topology_flows_dctcp.tr  path_1.txt  records.csv  topology.txt
flowsim/new_model/: gnn_layer_0.pt  gnn_layer_1.pt  gnn_layer_2.pt  lstmcell_rate.pt  lstmcell_rate_link.pt  lstmcell_time.pt  lstmcell_time_link.pt  output_layer.pt
flowsim/rdma_bench/herd/: run-servers.sh
flowsim/test/ns3/: config_topology_flows.txt  convert_log.txt  flow_to_links.txt  flow_to_path.txt  flows.txt  log_flowsim.txt  log_post.txt  log_sim.txt  mix_topology_flows.tr  param_topology_flows.txt  pfc_topology_flows.txt  qlen_topology_flows.txt
flowsim/validate_m4/: flows.json
flowsim/validate_m4/ns3/: config_topology_flows.txt  convert_log.txt  fct_topology_flows.txt  flow_to_links.txt  flow_to_path.txt  flows.txt  log_flowsim.txt  log_post.txt  log_sim.txt  mix_topology_flows.tr  param_topology_flows.txt  path_1.txt  pfc_topology_flows.txt  qlen_topology_flows.txt  records.csv
inference/: CMakeLists.txt  Chunk.cpp  Chunk.h  Event.cpp  EventList.cpp  EventQueue.cpp  EventQueue.h  Topology.cpp  Topology.h  Type.h  debug.sh  flows.txt  main.cpp  main_m4.cpp  main_m4_noflowsim.cpp  run.sh
inference/model/: lstmcell_rate.pt  lstmcell_time.pt  output_layer.pt
inference/models/: gnn_layer_0.pt  gnn_layer_1.pt  gnn_layer_2.pt  lstmcell_rate_link.pt
inference/models_eval/: gnn_layer_0.pt  gnn_layer_1.pt  gnn_layer_2.pt  lstmcell_rate.pt  lstmcell_time.pt  output_layer.pt
inference/models_t/: gnn_layer_1.pt  lstmcell_rate.pt
inference/models_t1/: gnn_layer_0.pt  gnn_layer_2.pt  lstmcell_rate_link.pt  lstmcell_time.pt  lstmcell_time_link.pt  output_layer.pt
inference/models_t2/: gnn_layer_0.pt  gnn_layer_1.pt  lstmcell_rate.pt  lstmcell_rate_link.pt  lstmcell_time.pt  lstmcell_time_link.pt  output_layer.pt
inference/models_topo/: gnn_layer_0.pt  gnn_layer_1.pt  gnn_layer_2.pt  gnn_layer_3.pt  lstmcell_time.pt  output_layer.pt
inference/python/: main_inference.py  reference  test.py
inference/src/: cuda_inference.cpp  inference.cpp  inference_link.cpp  main.cpp  main_cudagraph.cpp  main_demo.cpp  main_nocudagraph.cpp
testbedResults/: CLEANUP_SUMMARY.md  README.md  TUNING_CHANGES.md  WINDOW4_FIX.md  analyze.py  archive_old_analysis_readme.md  build.sh  pyproject.toml  run.py
testbedResults/UNISON/: consts.py  plan.md  process.py  run_m3.py  run_m4.py  run_m4_post.py  run_sweep.py
testbedResults/flowsim/: Chunk.h  EventQueue.cpp  Link.h  Topology.cpp  build_stdout.txt  main.cpp  run_sweep.py
testbedResults/m4/: CMakeLists.txt  Chunk.h  flows.txt  main_m4_noflowsim.cpp  original_m4.cpp  run_sweep.py
testbedResults/new_scenarios/: analyze.py  analyze_completion_times.py  analyze_simtime.py  analyzev2.py  combine_expirements.py  compute_delays.py  generate_sweep_figures.py  generate_sweep_figures_v2.py  get_bytes.py  get_proces.py  make_plots.py  normalize_timestamps.py  plot_dur_cdf.py  plot_eval.ipynb  plot_latencies.py  summarize_sweep_figures.py
(+4268 files in other folders)
