[project]
name = "m4"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
description = "Converted from conda environment.yml to uv"
readme = "README.md"

# --- Python deps only (system libs like CUDA, ffmpeg, etc. are NOT managed here) ---
dependencies = [
  # Core stack
  "torch==2.4.0",
  "torchvision==0.19.0",
  "torchaudio==2.4.0",
  "torch-geometric>=2.5.0",
  "pytorch-lightning==2.4.0",
  "lightning==2.4.0",
  "lightning-utilities==0.11.7",

  # Scientific & viz
  "numpy==1.26.4",
  "scipy==1.12.0",
  "pandas==2.2.2",
  "matplotlib==3.9.2",
  "seaborn==0.13.2",
  "bottleneck==1.3.7",
  "sympy==1.13.2",
  "numexpr==2.8.7",

  # Utilities
  "tqdm==4.66.5",
  "requests==2.32.3",
  "filelock==3.13.1",
  "protobuf==5.28.2",
  "tensorboard==2.18.0",
  "tensorboard-data-server==0.7.2",
  "torchmetrics==1.4.2",
  "networkx==3.2.1",
  "psutil==5.9.0",
  "pyyaml==6.0.1",
  "typing-extensions==4.11.0",
  "absl-py==2.1.0",
  "aiohttp==3.10.9",
  "aiohappyeyeballs==2.4.3",
  "aiosignal==1.3.1",
  "async-timeout==4.0.3",
  "attrs==24.2.0",
  "fonttools==4.51.0",
  "fsspec==2024.9.0",
  "gmpy2==2.1.2",
  "idna==3.7",
  "jinja2==3.1.4",
  "kiwisolver==1.4.4",
  "markdown==3.7",
  "mpmath==1.3.0",
  "multidict==6.1.0",
  "packaging==24.1",
  "pillow==10.4.0",
  "pyparsing==3.1.4",
  "python-dateutil==2.9.0.post0",
  "pysocks==1.7.1",
  "pytz==2024.1",
  "six==1.16.0",
  "sortedcontainers==2.4.0",
  "termcolor==2.4.0",
  "tornado==6.4.1",
  "unicodedata2==15.1.0",
  "urllib3==2.2.3",
  "werkzeug==3.0.4",
  "wheel==0.44.0",
  "yarl==1.13.1",

  # Optional UI lib you had via conda
  "pyqt5==5.15.10",
]

# uv configuration
[tool.uv]
# (no index-strategy here)

[tool.uv.pip]
# 1) Point PyTorch packages to CUDA 12.1 index (so torch/vision/audio pick GPU wheels)
extra-index-url = ["https://download.pytorch.org/whl/cu121"]

# DGL can be installed separately if needed:
# uv pip install dgl -f https://data.dgl.ai/wheels/torch-2.4/cu121/repo.html
