[project]
name = "m4"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
description = "Converted from conda environment.yml to uv"
readme = "README.md"

# --- Python deps only (system libs like CUDA, ffmpeg, etc. are NOT managed here) ---
dependencies = [
  # Core stack
  "torch==2.4.1",
  "torchvision==0.19.1",
  "torchaudio==2.4.1",
  "torch-geometric>=2.5.0",
  "pytorch-lightning==2.4.0",
  "lightning==2.4.0",
  "lightning-utilities==0.11.7",

  # Scientific & viz
  "numpy==1.26.4",
  "scipy==1.15.2",
  "pandas==2.2.2",
  "matplotlib==3.9.2",
  "seaborn==0.13.2",
  "bottleneck==1.3.7",
  "sympy==1.13.2",
  "numexpr==2.8.7",
  "scikit-learn==1.6.1",
  "numba==0.61.2",
  "llvmlite==0.44.0",

  # HuggingFace & datasets
  "datasets==3.5.1",
  "huggingface-hub==0.30.2",
  
  # Scientific data formats & astronomy
  "pyarrow==20.0.0",
  "netcdf4==1.7.2",
  "cftime==1.6.4.post1",
  "cdflib==1.3.4",
  "astropy==6.1.7",
  "astropy-iers-data==0.2025.4.28.0.37.27",
  "jplephem==2.22",
  "pyatmos==1.2.7",
  "pyerfa==2.0.1.5",
  "sgp4==2.24",
  "skyfield==1.53",

  # Jupyter & notebook support  
  "ipython==8.35.0",
  "ipykernel==6.29.5",
  "jupyter-client==8.6.3",
  "jupyter-core==5.7.2",
  "matplotlib-inline==0.1.7",
  "nest-asyncio==1.6.0",

  # Web/API & AI services
  "fastapi==0.115.12",
  "uvicorn==0.34.0",
  "starlette==0.46.1",
  "openai==1.72.0",
  "instructor==1.7.9",
  "pydantic==2.11.3",
  "pydantic-core==2.33.1",
  "pydantic-settings==2.8.1",
  "httpx==0.28.1",
  "httpcore==1.0.7",
  "h11==0.14.0",

  # Utilities & tools
  "tqdm==4.66.5",
  "requests==2.32.3",
  "filelock==3.13.1",
  "protobuf==5.28.2",
  "tensorboard==2.18.0",
  "tensorboard-data-server==0.7.2",
  "torchmetrics==1.4.2",
  "networkx==3.2.1",
  "psutil==5.9.0",
  "pyyaml==6.0.2",
  "typing-extensions==4.13.1",
  "wandb==0.19.10",
  "click==8.1.8",
  "colorama==0.4.6",
  "rich==13.9.4",
  "gitpython==3.1.44",
  "joblib==1.4.2",
  "jsonschema==4.23.0",
  "tenacity==9.1.2",
  "typer==0.15.2",
  "cmake==3.26.4",
  "nvidia-htop==1.2.0",
  "xarray==2025.3.1",
  "xxhash==3.5.0",
  "uuid-utils==0.10.0",
  "wget==3.2",
  "weave==0.51.44",
  "python-dotenv==1.1.0",
  "sentry-sdk==2.27.0",
  "grpcio==1.66.2",
  "googleapis-common-protos==1.69.2",
  "requests-toolbelt==1.0.0",
  "diskcache==5.6.3",
  "dill==0.3.8",
  "multiprocess==0.70.16",
  "threadpoolctl==3.6.0",
  "setproctitle==1.3.6",
  "shellingham==1.5.4",
  "emoji==2.14.1",
  "markdown-it-py==3.0.0",
  "mdurl==0.1.2",
  "jiter==0.8.2",
  "httpx-sse==0.4.0",
  "sse-starlette==2.2.1",
  "backoff==2.2.1",
  "deprecated==1.2.18",
  "docstring-parser==0.16",
  
  # OpenTelemetry observability stack
  "opentelemetry-api==1.31.1",
  "opentelemetry-sdk==1.31.1", 
  "opentelemetry-distro==0.52b1",
  "opentelemetry-instrumentation==0.52b1",
  "opentelemetry-exporter-otlp-proto-common==1.31.1",
  "opentelemetry-exporter-otlp-proto-http==1.31.1",
  "opentelemetry-proto==1.31.1",
  "opentelemetry-semantic-conventions==0.52b1",

  # Core Python utilities (moved from scattered locations)
  "absl-py==2.1.0",
  "attrs==24.2.0",
  "fsspec==2024.9.0", 
  "packaging==24.1",
  "six==1.16.0",
  "sortedcontainers==2.4.0",
  "wheel==0.44.0",

  # Async/HTTP core
  "aiohttp==3.11.16",
  "aiohappyeyeballs==2.4.3",
  "aiosignal==1.3.1",
  "async-timeout==4.0.3",
  "multidict==6.1.0",
  "yarl==1.19.0",

  # Text & parsing
  "jinja2==3.1.4",
  "markdown==3.7",
  "pyparsing==3.2.3",
  "unicodedata2==15.1.0",
  
  # Date/time & localization
  "python-dateutil==2.9.0.post0",
  "pytz==2024.1",
  
  # Network & protocols  
  "idna==3.7",
  "pysocks==1.7.1",
  "urllib3==2.2.3",
  
  # Math & scientific support
  "gmpy2==2.1.2", 
  "mpmath==1.3.0",
  
  # Graphics & UI support
  "fonttools==4.51.0",
  "kiwisolver==1.4.4",
  "pillow==10.4.0",
  
  # System & terminal
  "termcolor==2.4.0",
  "tornado==6.4.1",
  "werkzeug==3.0.4",

  # Optional UI lib you had via conda
  "pyqt5==5.15.10",
]

# uv configuration
[tool.uv]
# (no index-strategy here)

[tool.uv.pip]
# 1) Point PyTorch packages to CUDA 12.1 index (so torch/vision/audio pick GPU wheels)
extra-index-url = ["https://download.pytorch.org/whl/cu121"]

# DGL can be installed separately if needed (requires CUDA-specific wheels):
# uv pip install "dgl==2.4.0" -f https://data.dgl.ai/wheels/torch-2.4/cu121/repo.html